@@ -4,8 +4,7 @@ import java.util.*;
 import java.util.concurrent.atomic.AtomicBoolean;
 
 import com.bta.api.base.CRUDService;
-import com.bta.api.dto.ChangeUserPasswordDto;
-import com.bta.api.dto.LoginUserDto;
+import com.bta.api.dto.*;
 import com.bta.api.entity.User;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -14,7 +13,6 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import com.bta.api.dto.UserDto;
 import com.bta.api.exception.UserServiceCustomException;
 import com.bta.api.repository.RoleRepository;
 import com.bta.api.repository.UserRepository;
@@ -33,6 +31,12 @@ public class UserCRUDService implements CRUDService<UserDto>, UserDetailsService
         List<UserDto> userDtos = new ArrayList<>();
         usersRepository.findAll().forEach(user -> userDtos.add(user.toDto()));
         return userDtos;
+    }
+
+    public List<User> getAllEntity() {
+        List<User> users = new ArrayList<>();
+        usersRepository.findAll().forEach(users::add);
+        return users;
     }
 
     @Override
@@ -55,6 +59,16 @@ public class UserCRUDService implements CRUDService<UserDto>, UserDetailsService
         List<UserDto> userDtos = new ArrayList<>();
         usersRepository.saveAll(users).forEach(user -> userDtos.add(user.toDto()));
         return userDtos;
+    }
+
+    public List<User> saveEntityCollection(List<UserEntityDto> dtos) {
+        List<User> users = new ArrayList<>();
+        dtos.forEach((UserEntityDto dto) -> {
+            users.add(new User().applyChanges(dto, passwordEncoder));
+        });
+        List<User> resultUsers = new ArrayList<>();
+        usersRepository.saveAll(users).forEach(resultUsers::add);
+        return resultUsers;
     }
 
     @Override
@@ -83,21 +97,30 @@ public class UserCRUDService implements CRUDService<UserDto>, UserDetailsService
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         List<User> users = usersRepository.findByEmail(username);
         if (users.isEmpty()) {
-            return null;
+            throw new UsernameNotFoundException("Username not found");
         }
-        return users.getFirst();
+        return users.get(0);
     }
 
-    public boolean loginByCredentials(LoginUserDto dto) {
+    public UserDto registerNewUser(RegisterUserDto dto) throws UserServiceCustomException {
+        if (usersRepository.existsById(dto.getId())) {
+            throw new UserServiceCustomException("Duplicate user creation, please try again", "DUPLICATE_USER_CREATION");
+        }
+        return usersRepository.save(new User().applyChanges(dto, passwordEncoder)).toDto();
+    }
+
+    public boolean loginByCredentials(LoginUserDto dto) throws UsernameNotFoundException {
         User user = (User) loadUserByUsername(dto.getEmail());
-        if (user != null) {
-            passwordEncoder.encode(dto.getPassword());
+        return passwordEncoder.encode(dto.getPassword()).equals(user.getPassword());
+    }
+
+    public boolean saveUserPassword(ChangeUserPasswordDto dto) throws UsernameNotFoundException {
+        User user = (User) loadUserByUsername(dto.getEmail());
+        if (passwordEncoder.encode(dto.getOldPassword()).equals(user.getPassword())) {
+            user.setPassword(passwordEncoder.encode(dto.getNewPassword()));
+            usersRepository.save(user);
+            return true;
         }
         return false;
-    }
-
-    public boolean saveUserPassword(ChangeUserPasswordDto dto) {
-        User user = (User) loadUserByUsername(dto.getEmail());
-
     }
 }
